# MySweetHome

./: CMakeLists.txt  Dockerfile  commits.txt  dwawada
include/: AlarmHandler.h  Camera.h  DetectionSystem.h  DeviceFactory.h  HomeController.h  Menu.h  NotificationSystem.h  SecuritySystem.h
src/: Camera.cpp  DetectionSystem.cpp  Device.cpp  HomeController.cpp  Menu.cpp  NotificationSystem.cpp  SecuritySystem.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
web/: package-lock.json  package.json  server.js
web/public/: app.js  index.html
